# personality-test

./: .env.example  .gitignore  .prettierrc.cjs  CONTEXT.md  README.md  docker-compose.yml  index.html  tsconfig.vitest.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: a1b2c3d4e5f6_test_flow_schema.py  b2c3d4e5f6a7_add_narrative_column.py  c3d4e5f6a7b8_coach_schema.py  e72a84c0121a_initial_empty_schema.py
backend/app/: main.py  models.py
backend/app/api/v1/: coach.py  forms.py  health.py  reports.py  schemas.py  test_runs.py
backend/app/auth/: clerk.py
backend/app/coach/: prompt.py  schemas.py
backend/app/core/: config.py  db.py
backend/app/llm/: __init__.py  base.py  factory.py  null.py  vertex.py
backend/app/report/: __init__.py  narrative.py  pdf.py  textbank.py
backend/app/report/templates/: report.html
backend/app/scoring/: __init__.py  engine.py  engine_quick.py  forms.py  serialize.py
backend/app/scoring/data/: ipip_neo_120.json  ipip_neo_60.json  norms_120.json  norms_60_domains.json  textbank_120.json
backend/scripts/: build_items60.py  derive_norms60.py  extract_items.py  extract_norms.py  extract_textbank.py  gen_goldens.py
backend/tests/: conftest.py  test_coach_api.py  test_coach_auth.py  test_forms_api.py  test_health.py  test_llm_factory.py  test_narrative.py  test_reports_api.py  test_runs_api.py  test_scoring_parity.py  test_scoring_quick.py  test_textbank.py
backend/tests/fixtures/: golden_scores.json
docs/: ANALYSIS.md  PLAN.md
(+62 files in other folders)
